--- a/TextFlex/findbooks/templates/findbooks/base.html
+++ b/TextFlex/findbooks/templates/findbooks/base.html
@@ -35,24 +35,36 @@
                     </li>
                   </ul>
               <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-                        <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                        <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-                      </svg>
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">My Account</a>
-                    <a class="dropdown-item" href="#">Log Out</a>
-                  </div>
-                </li>
+                {% if user.is_authenticated %}
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <h7>{{ user.username }} </h7><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
+                          <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                          <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
+                        </svg>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item" href="{% url 'profile' %}">My Account</a>
+                      <a class="dropdown-item" href="{% url 'sign-out' %}">Log Out</a>
+                    </div>
+                  </li>
+                  {% else %}
+                    <div class="navbar-nav">
+                      <a class="nav-item nav-link" href="{% url 'sign-in' %}">Sign In</a>
+                      <a class="nav-item nav-link" href="{% url 'register'%}">Sign Up</a>
+                    </div>
+                  {% endif %}
               </ul>
             </div>
           </nav>
 
         <div class="container">
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-{{message.tags}}">{{ message }}</div>
+              {% endfor %}
+            {% endif %}
             {% block content %}{% endblock %}
         </div>
         <!-- Optional JavaScript -->
