--- a/TextFlex/findbooks/templates/findbooks/select-term.html
+++ b/TextFlex/findbooks/templates/findbooks/select-term.html
@@ -1,9 +1,13 @@
 {% extends "findbooks/base.html" %}
 {% block content %}
-    <h1>Select Term</h1>
+    {% if user.is_authenticated %}
+        <h1>Select Term</h1>
 
-    {% for term in terms %}
-    <h1>{{ term.term }}</h1>
-    <h1>{{ term.title }}</h1>
-    {% endfor %}
+        {% for term in terms %}
+        <h1>{{ term.term }}</h1>
+        <h1>{{ term.title }}</h1>
+        {% endfor %}
+    {% else %}
+        <h1>SIGN IN PLEASE</h1>
+    {% endif %}
 {% endblock content %}
