--- a/TextFlex/findbooks/templates/findbooks/select-term.html
+++ b/TextFlex/findbooks/templates/findbooks/select-term.html
@@ -1,22 +1,34 @@
 {% extends "findbooks/base.html" %}
+{% block popup %}
+<div style="display:none; position: absolute; width:100%; height:100%; background-color: rgba(153, 153, 153, 0.3);" class="loading-popup", id="loading">
+    <div id="loader"></div>
+</div>
+{% endblock popup %}
+
 {% block content %}
     {% if user.is_authenticated %}
-        <h1>Select Term</h1>
-        <div style="display: block; margin: auto; width: 100%;">
-            <div class="row" style="margin-top: 10%; width: 100%;">
+        <script>
+
+        function openLoader(term) {
+            document.getElementById("loading").style.display = "block";
+            document.getElementById("loading").style.z_index = 99;
+            document.getElementById("terms").style.display = "none";
+            document.getElementById("sel-term").style.visibility = "hidden";
+            
+            window.location.href = term;
+        }
+        </script>
+        <h1 id="sel-term" class="page-prompt">Select Term</h1>
+        <div id="terms" class="wpi-terms">
+            <div class="row">
                 {% for term in terms %}
-                <div class="col-auto mb-3" style="display: block; margin: auto; width: 33%;">
-                    <div class="card text-white mb-3" style="width: 100%; background-color: #A9B0B7; display: block; margin: auto;">
-                        <!--<img class="card-img-top" src="img/A-Term.png"/>-->
-                        <div class="card-body" style="text-align:center;">
-                        <h5 class="card-title">{{ term.title }}</h5>
-                        <p class="card-text">
-                            
-                        </p>
-                        <form action="submit{{ term.title }}" method="POST" style="background-color:rgb(172, 43, 55); color: white; border-style: none; font-weight: bold;">{% csrf_token %}
-                            <input style="visibility: hidden; height: 0px; width: 0px;" type="text" name="{{ term.title }} Form" value="{{ term.term }}">
-                            <input type="submit" name="{{ term.title }} button" value="Select" class="btn btn-primary" style="background-color:rgb(172, 43, 55); color: white; border-style: none; font-weight: bold;">
-                        </form>
+                <div class="col-auto mb-3 card-col">
+                    <div class="card text-white mb-3 term-card">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ term.title }}</h5>
+                            <Button id="get-books" onclick="openLoader('{{ term.title }}')" class="btn btn-primary"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                            </svg></Button>
                         </div>
                     </div>
                 </div>
@@ -24,6 +36,11 @@
             </div>
           </div>
     {% else %}
-        <h1>SIGN IN PLEASE</h1>
+        <div class="wpi-terms">
+            <h1 class="page-prompt">Welcome to Textflex!</h1>
+
+        <Button class="sign-up-textflex" onclick="window.location.href = {% url 'register' %}">Sign Up</Button>
+        <a  class="sign-in-landing" href="{% url 'sign-in' %}">Sign In</a>
+        </div>
     {% endif %}
 {% endblock content %}
