--- a/TextFlex/users/templates/users/signin.html
+++ b/TextFlex/users/templates/users/signin.html
@@ -2,19 +2,19 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">
+        <form class="access-forms" method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Sign In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign In</button>
+                <button class="btn btn-outline-info form-btn-textflex" type="submit">Sign In</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
+                <a class="ml-2 form-sign-in-up" href="{% url 'register' %}">Sign Up</a>
             </small>
         </div>
     </div>
