--- a/TextFlex/findbooks/templates/findbooks/results-page.html
+++ b/TextFlex/findbooks/templates/findbooks/results-page.html
@@ -55,7 +55,7 @@
                 img.src = course_list[index].image;
                 coursename.innerHTML = course_list[index].dept + " " + course_list[index].number + " " + course_list[index].section;
                 title.innerHTML = course_list[index].title;
-                isbn.innerHTML = "ISBN-13: " + course_list[index].isbn;
+                isbn.innerHTML = course_list[index].isbn;
                 //seller1.innerHTML = course_list[index].links[0];
                 //seller2.innerHTML = course_list[index].links[1];
                 //seller3.innerHTML = course_list[index].links[2];
@@ -76,7 +76,7 @@
                 img.src = course_list[index].image;
                 coursename.innerHTML = course_list[index].dept + " " + course_list[index].number + " " + course_list[index].section;
                 title.innerHTML = course_list[index].title;
-                isbn.innerHTML = "ISBN-13: " + course_list[0].isbn;
+                isbn.innerHTML = course_list[0].isbn;
                 //seller1.innerHTML = course_list[index].links[0];
                 //seller2.innerHTML = course_list[index].links[1];
                 //seller3.innerHTML = course_list[index].links[2];
@@ -106,7 +106,7 @@
             img.src = course_list[0].image;
             coursename.innerHTML = course_list[0].dept + " " + course_list[0].number + " " + course_list[index].section;
             title.innerHTML = course_list[0].title;
-            isbn.innerHTML = "ISBN-13: " + course_list[0].isbn;
+            isbn.innerHTML = course_list[0].isbn;
             //seller1.innerHTML = course_list[0].links[0];
             //seller2.innerHTML = course_list[0].links[1];
             //seller3.innerHTML = course_list[0].links[2];
@@ -128,58 +128,62 @@
             load_initial()
         }
     </script>
-
-        <body onload="loadCourses({{ books }})">
-        <h1 class="page-prompt">Textbooks</h1>
-        <div class="book-result">
-            <div class="col-auto mb-3">
-              <div class="card text-white mb-3 book-result-card">
-                <h4 id="CourseName" class="card-title"></h4>
-                <img id="bookImg" class="card-img-top" src="#"/>
-                <h5 id="BookTitle"></h5>
-                <h5 id="ISBN" style="font-size: 12px;"></h5>
-                <div class="card-body">
-                  <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">Seller</th>
-                          <th scope="col">Price</th>
-                          <th scope="col">Link</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td id="Sell1"></td>
-                          <td id="Price1"></td>
-                          <td><a id="Link1" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                            </svg></a></td>
-                        </tr>
-                        <tr>
-                          <td id="Sell2"></td>
-                          <td id="Price2"></td>
-                          <td><a id="Link2" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                            </svg></a></td>
-                        </tr>
-                        <tr>
-                          <td id="Sell3"></td>
-                          <td id="Price3"></td>
-                          <td><a id="Link3" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                            </svg></a></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  <div>
-                      <button class="btn btn-primary book-navigate-btn" style="float: left;" onclick="updateCourse(0)"> < </button>
-                      <button class="btn btn-primary book-navigate-btn" style="float: right;" onclick="updateCourse(1)"> > </button>
-                  </div>
-                  </div>
-              </div>
-          </div>
-        </body>
-        
+        {% if books == 1 %}
+            <h1 class="page-prompt">Sorry! Books for this term are not yet selected!</h1>
+        {% else %}
+            <body onload="loadCourses({{ books }})">
+            <h1 class="page-prompt">Textbooks</h1>
+            <div class="book-result">
+                <div class="col-auto mb-3">
+                <div class="card text-white mb-3 book-result-card">
+                    <h4 id="CourseName" class="card-title"></h4>
+                    <img id="bookImg" class="card-img-top" src="#"/>
+                    <h5 id="BookTitle"></h5>
+                    <h5 id="ISBN" style="font-size: 12px;"></h5>
+                    <hr>
+                    <h5 style="font-size: 20px;">Likely Results from Trusted Sellers</h5>
+                    <div class="card-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                            <th scope="col">Seller</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Link</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <td id="Sell1"></td>
+                            <td id="Price1"></td>
+                            <td><a id="Link1" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                                </svg></a></td>
+                            </tr>
+                            <tr>
+                            <td id="Sell2"></td>
+                            <td id="Price2"></td>
+                            <td><a id="Link2" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                                </svg></a></td>
+                            </tr>
+                            <tr>
+                            <td id="Sell3"></td>
+                            <td id="Price3"></td>
+                            <td><a id="Link3" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                                </svg></a></td>
+                            </tr>
+                        </tbody>
+                        </table>
+                    <div>
+                        <button class="btn btn-primary book-navigate-btn" style="float: left;" onclick="updateCourse(0)"> < </button>
+                        <button class="btn btn-primary book-navigate-btn" style="float: right;" onclick="updateCourse(1)"> > </button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            </body>
+        {% endif %}
         
     {% else %}
         <h1>SIGN IN PLEASE</h1>
