--- a/TextFlex/users/templates/users/profile.html
+++ b/TextFlex/users/templates/users/profile.html
@@ -10,7 +10,7 @@
             </div>
         </div>
 
-        <form method="POST" enctype="multipart/form-data">
+        <form class="access-forms" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Settings</legend>
@@ -18,7 +18,7 @@
                 {{ p_form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Save Changes</button>
+                <button class="btn btn-outline-info form-btn-textflex" type="submit">Save Changes</button>
             </div>
         </form>
     </div>
