--- a/TextFlex/findbooks/templates/findbooks/results-page.html
+++ b/TextFlex/findbooks/templates/findbooks/results-page.html
@@ -13,6 +13,7 @@
                 this.title = title.toString();
                 this.isbn = isbn.toString();
                 this.links = []
+                this.sellers = []
                 for(var i = 0; i < links.length; i++) {
                     this.links[i] = links[i]
                 }
@@ -21,6 +22,11 @@
                 }
                 else {
                     this.image = '/media/default.jpg';
+                }
+            
+                for(var i = 0; i < links.length; i++) {
+                    var seller = links[i].match(new RegExp("www." + "(.*)" + "\\."));
+                    this.sellers[i] = seller[1]
                 }
             }
         }
@@ -39,12 +45,12 @@
             var seller1 = document.getElementById("Sell1");
             var seller2 = document.getElementById("Sell2");
             var seller3 = document.getElementById("Sell3");
-            var price1 = document.getElementById("Price1");
-            var price2 = document.getElementById("Price2");
-            var price3 = document.getElementById("Price3");
             var link1 = document.getElementById("Link1");
             var link2 = document.getElementById("Link2");
             var link3 = document.getElementById("Link3");
+            var row1 = document.getElementById("row1");
+            var row2 = document.getElementById("row2");
+            var row3 = document.getElementById("row3");
             if(direction == 1) { //forward
                 if(index == (course_list.length - 1)) {
                     index = 0;
@@ -56,15 +62,38 @@
                 coursename.innerHTML = course_list[index].dept + " " + course_list[index].number + " " + course_list[index].section;
                 title.innerHTML = course_list[index].title;
                 isbn.innerHTML = course_list[index].isbn;
-                //seller1.innerHTML = course_list[index].links[0];
-                //seller2.innerHTML = course_list[index].links[1];
-                //seller3.innerHTML = course_list[index].links[2];
-                //price1.innerHTML = course_list[index].links[0];
-                //price2.innerHTML = course_list[index].links[1];
-                //price3.innerHTML = course_list[index].links[2];
-                link1.href = course_list[index].links[0];
-                link2.href = course_list[index].links[1];
-                link3.href = course_list[index].links[2];
+                if(course_list[index].links.length == 1) {
+                    seller1.innerHTML = course_list[index].sellers[0];
+                    link1.href = course_list[index].links[0];
+                    row1.style.visibility="visible";
+                    row2.style.visibility="hidden";
+                    row3.style.visibility="hidden";
+                }
+                else if(course_list[index].links.length == 2) {
+                    seller1.innerHTML = course_list[index].sellers[0];
+                    seller2.innerHTML = course_list[index].sellers[1];
+                    link1.href = course_list[index].links[0];
+                    link2.href = course_list[index].links[1];
+                    row1.style.visibility="visible";
+                    row2.style.visibility="visible";
+                    row3.style.visibility="hidden";
+                }
+                else if(course_list[index].links.length == 3) {
+                    seller1.innerHTML = course_list[index].sellers[0];
+                    seller2.innerHTML = course_list[index].sellers[1];
+                    seller3.innerHTML = course_list[index].sellers[2];
+                    link1.href = course_list[index].links[0];
+                    link2.href = course_list[index].links[1];
+                    link3.href = course_list[index].links[2];
+                    row1.style.visibility="visible";
+                    row2.style.visibility="visible";
+                    row3.style.visibility="visible";
+                }
+                else {
+                    row1.style.visibility="hidden";
+                    row2.style.visibility="hidden";
+                    row3.style.visibility="hidden";
+                }
             }
             else if(direction == 0) { //backward
                 if(index == 0) {
@@ -76,16 +105,39 @@
                 img.src = course_list[index].image;
                 coursename.innerHTML = course_list[index].dept + " " + course_list[index].number + " " + course_list[index].section;
                 title.innerHTML = course_list[index].title;
-                isbn.innerHTML = course_list[0].isbn;
-                //seller1.innerHTML = course_list[index].links[0];
-                //seller2.innerHTML = course_list[index].links[1];
-                //seller3.innerHTML = course_list[index].links[2];
-                //price1.innerHTML = course_list[index].links[0];
-                //price2.innerHTML = course_list[index].links[1];
-                //price3.innerHTML = course_list[index].links[2];
-                link1.href = course_list[index].links[0];
-                link2.href = course_list[index].links[1];
-                link3.href = course_list[index].links[2];
+                isbn.innerHTML = course_list[index].isbn;
+                if(course_list[index].links.length == 1) {
+                    seller1.innerHTML = course_list[index].sellers[0];
+                    link1.href = course_list[index].links[0];
+                    row1.style.visibility="visible";
+                    row2.style.visibility="hidden";
+                    row3.style.visibility="hidden";
+                }
+                else if(course_list[index].links.length == 2) {
+                    seller1.innerHTML = course_list[index].sellers[0];
+                    seller2.innerHTML = course_list[index].sellers[1];
+                    link1.href = course_list[index].links[0];
+                    link2.href = course_list[index].links[1];
+                    row1.style.visibility="visible";
+                    row2.style.visibility="visible";
+                    row3.style.visibility="hidden";
+                }
+                else if(course_list[index].links.length == 3) {
+                    seller1.innerHTML = course_list[index].sellers[0];
+                    seller2.innerHTML = course_list[index].sellers[1];
+                    seller3.innerHTML = course_list[index].sellers[2];
+                    link1.href = course_list[index].links[0];
+                    link2.href = course_list[index].links[1];
+                    link3.href = course_list[index].links[2];
+                    row1.style.visibility="visible";
+                    row2.style.visibility="visible";
+                    row3.style.visibility="visible";
+                }
+                else {
+                    row1.style.visibility="hidden";
+                    row2.style.visibility="hidden";
+                    row3.style.visibility="hidden";
+                }
             }
         }
         
@@ -97,25 +149,42 @@
             var seller1 = document.getElementById("Sell1");
             var seller2 = document.getElementById("Sell2");
             var seller3 = document.getElementById("Sell3");
-            var price1 = document.getElementById("Price1");
-            var price2 = document.getElementById("Price2");
-            var price3 = document.getElementById("Price3");
             var link1 = document.getElementById("Link1");
             var link2 = document.getElementById("Link2");
             var link3 = document.getElementById("Link3");
+            var row1 = document.getElementById("row1");
+            var row2 = document.getElementById("row2");
+            var row3 = document.getElementById("row3");
             img.src = course_list[0].image;
             coursename.innerHTML = course_list[0].dept + " " + course_list[0].number + " " + course_list[index].section;
             title.innerHTML = course_list[0].title;
             isbn.innerHTML = course_list[0].isbn;
-            //seller1.innerHTML = course_list[0].links[0];
-            //seller2.innerHTML = course_list[0].links[1];
-            //seller3.innerHTML = course_list[0].links[2];
-            //price1.innerHTML = course_list[0].links[0];
-            //price2.innerHTML = course_list[0].links[1];
-            //price3.innerHTML = course_list[[0].links[2];
-            link1.href = course_list[0].links[0];
-            link2.href = course_list[0].links[1];
-            link3.href = course_list[0].links[2];
+            if(course_list[0].links.length == 1) {
+                seller1.innerHTML = course_list[0].sellers[0];
+                link1.href = course_list[0].links[0];
+                row1.style.visibility="hidden";
+                row2.style.visibility="hidden";
+            }
+            else if(course_list[0].links.length == 2) {
+                seller1.innerHTML = course_list[0].sellers[0];
+                seller2.innerHTML = course_list[0].sellers[1];
+                link1.href = course_list[0].links[0];
+                link2.href = course_list[0].links[1];
+                row3.style.visibility="hidden";
+            }
+            else if(course_list[0].links.length == 3) {
+                seller1.innerHTML = course_list[0].sellers[0];
+                seller2.innerHTML = course_list[0].sellers[1];
+                seller3.innerHTML = course_list[0].sellers[2];
+                link1.href = course_list[0].links[0];
+                link2.href = course_list[0].links[1];
+                link3.href = course_list[0].links[2];
+            }
+            else {
+                    row1.style.visibility="hidden";
+                    row2.style.visibility="hidden";
+                    row3.style.visibility="hidden";
+                }
         }
 
         function loadCourses(books) {
@@ -147,28 +216,24 @@
                         <thead>
                             <tr>
                             <th scope="col">Seller</th>
-                            <th scope="col">Price</th>
                             <th scope="col">Link</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr id="row1">
                             <td id="Sell1"></td>
-                            <td id="Price1"></td>
                             <td><a id="Link1" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                                 </svg></a></td>
                             </tr>
-                            <tr>
+                            <tr id="row2">
                             <td id="Sell2"></td>
-                            <td id="Price2"></td>
                             <td><a id="Link2" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                                 </svg></a></td>
                             </tr>
-                            <tr>
+                            <tr id="row3">
                             <td id="Sell3"></td>
-                            <td id="Price3"></td>
                             <td><a id="Link3" href="#" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                                 </svg></a></td>
